# MPPrinter

./: BUILD.md  CMakeLists.txt  Makefile.linux  Makefile.macosx  Makefile.win  README.md  build_all.bat  cp_exefile.bat  cp_exefile.sh  mpprinter.doxy
Eclipse/linux/mpprinter/: .cproject  .project
Eclipse/win/mpprinter/: .cproject  .project  post_build.sh  pre_build.sh
VC++2008/: mpprinter.vcproj  mpprinter.vsprops  post_build.bat
VC++2010/: mpprinter.props  mpprinter.vcxproj  mpprinter.vcxproj.filters  wxwidgets.props
VC++2015/: mpprinter.vcxproj  mpprinter.vcxproj.filters  post_build.bat  wxwidgets.props
Xcode/mpprinter/mpprinter.xcodeproj/: project.pbxproj
docs/: COPYRIGHT.txt  ChangeLog.txt  Readme.txt  Spec.txt  sample.bas
font/: decfont_m8.pl  mkfont_l3.pl  mkfont_m8.pl
lang/ja/: mpprinter.mo  mpprinter.po
patch/: wxWidget-3.0.0-gtk.patch
src/: buffer.cpp  buffer.h  common.h  config.cpp  config.h  coordinate.cpp  coordinate.h  ctrl_setting.cpp  ctrl_setting.h  debugreport.cpp  debugreport.h  densitybox.cpp  densitybox.h  dpbuffer.cpp  dpbuffer.h  errorinfo.cpp  errorinfo.h  main.cpp  main.h  marginbox.cpp  marginbox.h  mp1020.cpp  mp1020.h  mp80.cpp  mp80.h  mp_model.cpp  mp_model.h  mp_printer.cpp  mp_printer.h  mpprinter.rc  server.cpp  server.h  server_setting.cpp  server_setting.h  version.h
src/res/: Info.plist  hand.xbm  hand_mask.xbm  magnify.xbm  magnify_mask.xbm  mpprinter.icns  mpprinter.xpm
